src/components/Table/Table.module.scss
.container {
  width: 100%;

  .loading-mask {
    display: flex;
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    align-items: center;
    justify-content: center;
    background: rgba(255, 255, 255, 0.5);
  }

  .table {
    cursor: default;
    width: 100%;
    border-collapse: collapse;
    white-space: normal;

    &.auto {
      table-layout: auto;
    }

    &.fixed {
      table-layout: fixed;
    }
  }

  .borderless {
    border: none;
  }

  &.scrollable {
    display: block;
    -webkit-overflow-scrolling: touch;

    &.scrollable-x {
      overflow-x: auto;
    }

    &.scrollable-y {
      height: 100%;
      overflow-y: auto;
    }

    >.table-bordered {
      border: 0;
    }
  }
}

